syntax = "proto3";

package gov.cms.mpsm.rda.v1.fiss;

option java_multiple_files = true;

import "rda/v1/enum_options.proto";

// Assignment of Benefits Indicator
enum FissAssignmentOfBenefitsIndicator {
  // ASCII Y
  ASSIGNMENT_OF_BENEFITS_INDICATOR_BENEFITS_ASSIGNED = 0     [(string_value) = "Y"];

  // ASCII N
  ASSIGNMENT_OF_BENEFITS_INDICATOR_NO_BENEFITS_ASSIGNED = 1  [(string_value) = "N"];
}
