syntax = "proto3";

package gov.cms.mpsm.rda.v1.fiss;

option java_multiple_files = true;

import "rda/v1/fiss/fiss_claim_status.proto";

message FissAuditTrail {
  oneof badt_status {
    FissClaimStatus badt_status_enum = 1;
    string badt_status_unrecognized = 2;
  }
  optional string badt_loc = 3;
  optional string badt_oper_id = 4;
  optional string badt_reas = 5;
  optional string badt_curr_date_cymd = 6;

  // RDA Position:
  //
  // Indicates which position this audit trail is located in on the claim. This value is assigned by RDA.
  uint32 rda_position = 7;
}
