syntax = "proto3";

package gov.cms.mpsm.rda.v1.fiss;

option java_multiple_files = true;

import "rda/v1/enum_options.proto";

enum FissBillClassification {
  BILL_CLASSIFICATION_INPATIENT_PART_A = 0                    [(string_value) = "1"];
  BILL_CLASSIFICATION_HOSPITAL_BASED_OR_INPATIENT_PART_B = 1  [(string_value) = "2"];
  BILL_CLASSIFICATION_OUTPATIENT = 2                          [(string_value) = "3"];
  BILL_CLASSIFICATION_OTHER_PART_B = 3                        [(string_value) = "4"];
  BILL_CLASSIFICATION_INTERMEDIATE_CARE_LEVEL_I = 4           [(string_value) = "5"];
  BILL_CLASSIFICATION_INTERMEDIATE_CARE_LEVEL_II = 5          [(string_value) = "6"];
  BILL_CLASSIFICATION_SUBACUTE_INPATIENT = 6                  [(string_value) = "7"];
  BILL_CLASSIFICATION_SWING_BED = 7                           [(string_value) = "8"];
  BILL_CLASSIFICATION_RESERVED_FOR_NATIONAL_ASSIGNMENT = 8    [(string_value) = "9"];
}

enum FissBillClassificationForClinics {
  BILL_CLASSIFICATION_FOR_CLINICS_RURAL_HEALTH_FACILITY = 0                                 [(string_value) = "1"];
  BILL_CLASSIFICATION_FOR_CLINICS_HOSPITAL_BASED_OR_INDEPENDENT_RENAL_DIALYSIS_FACILITY = 1 [(string_value) = "2"];
  BILL_CLASSIFICATION_FOR_CLINICS_FREE_STANDING_PROVIDER_BASED_FQHC = 2                     [(string_value) = "3"];
  BILL_CLASSIFICATION_FOR_CLINICS_OTHER_REHABILITATION_FACILITY = 3                         [(string_value) = "4"];
  BILL_CLASSIFICATION_FOR_CLINICS_COMPREHENSIVE_OUTPATIENT_REHABILITATION_FACILITY = 4      [(string_value) = "5"];
  BILL_CLASSIFICATION_FOR_CLINICS_COMMUNITY_MENTAL_HEALTH_CENTER = 5                        [(string_value) = "6"];
  BILL_CLASSIFICATION_FOR_CLINICS_OPIOID_TREATMENT_PROGRAM = 6                              [(string_value) = "7"];
  BILL_CLASSIFICATION_FOR_CLINICS_RESERVED_FOR_NATIONAL_ASSIGNMENT = 7                      [(string_value) = "8"];
  BILL_CLASSIFICATION_FOR_CLINICS_OTHER = 8                                                 [(string_value) = "9"];
}

enum FissBillClassificationForSpecialFacilities {
  BILL_CLASSIFICATION_FOR_SPECIAL_FACILITIES_HOSPICE_NON_HOSPITAL_BASED = 0                                   [(string_value) = "1"];
  BILL_CLASSIFICATION_FOR_SPECIAL_FACILITIES_HOSPICE_HOSPITAL_BASED = 1                                       [(string_value) = "2"];
  BILL_CLASSIFICATION_FOR_SPECIAL_FACILITIES_AMBULATORY_SURGICAL_CENTER_SERVICES_TO_HOSPITAL_OUTPATIENTS = 2  [(string_value) = "3"];
  BILL_CLASSIFICATION_FOR_SPECIAL_FACILITIES_FREE_STANDING_BIRTHING_CENTER = 3                                [(string_value) = "4"];
  BILL_CLASSIFICATION_FOR_SPECIAL_FACILITIES_CRITICAL_ACCESS_HOSPITALS = 4                                    [(string_value) = "5"];
  BILL_CLASSIFICATION_FOR_SPECIAL_FACILITIES_RESIDENTIAL_FACILITY = 5                                         [(string_value) = "6"];
  BILL_CLASSIFICATION_FOR_SPECIAL_FACILITIES_OPIOID_TREATMENT_PROGRAM = 6                                     [(string_value) = "7"];
  BILL_CLASSIFICATION_FOR_SPECIAL_FACILITIES_RESERVED_FOR_NATIONAL_ASSIGNMENT = 7                             [(string_value) = "8"];
  BILL_CLASSIFICATION_FOR_SPECIAL_FACILITIES_OTHER = 8                                                        [(string_value) = "9"];
}
