syntax = "proto3";

package gov.cms.mpsm.rda.v1.fiss;

option java_multiple_files = true;

import "rda/v1/enum_options.proto";

// FISS Payers Code
enum FissPayersCode {
  PAYERS_CODE_MEDICAID = 0                                        [(string_value) = "1"];

  PAYERS_CODE_BLUE_CROSS = 1                                      [(string_value) = "2"];

  PAYERS_CODE_OTHER = 2                                           [(string_value) = "3"];

  PAYERS_CODE_NONE = 3                                            [(string_value) = "4"];

  PAYERS_CODE_WORKING_AGE = 4                                     [(string_value) = "A"];

  //
  // End Stage Renal Disease (ESRD) Beneficiary in 30 Month Coordination Period
  // with an EGHP (Employer Group Health Plan).
  PAYERS_CODE_END_STAGE_RENAL_DISEASE_BENEFICIARY = 5             [(string_value) = "B"];

  PAYERS_CODE_CONDITIONAL_PAYMENT = 6                             [(string_value) = "C"];

  PAYERS_CODE_AUTO_NO_FAULT = 7                                   [(string_value) = "D"];

  PAYERS_CODE_WORKERS_COMPENSATION = 8                            [(string_value) = "E"];

  PAYERS_CODE_PUBLIC_HEALTH_SERVICE_OR_OTHER_FEDERAL_AGENCY = 9   [(string_value) = "F"];

  PAYERS_CODE_DISABLED = 10                                       [(string_value) = "G"];

  PAYERS_CODE_BLACK_LUNG = 11                                     [(string_value) = "H"];

  PAYERS_CODE_VETERANS_ADMINISTRATION = 12                        [(string_value) = "I"];

  PAYERS_CODE_LIABILITY = 13                                      [(string_value) = "L"];

  PAYERS_CODE_MEDICARE = 14                                       [(string_value) = "Z"];
}
