syntax = "proto3";

package gov.cms.mpsm.rda.v1.fiss;

option java_multiple_files = true;

import "rda/v1/enum_options.proto";

// FISS Repository Indicator
enum FissRepositoryIndicator {
  REPOSITORY_INDICATOR_HIC_HAS_BEEN_MOVED = 0   [(string_value) = "Y"];

  REPOSITORY_INDICATOR_NOT_APPLICABLE = 1       [(string_value) = " "];
}
