package gov.cms.bfd.pipeline.rda.grpc.server;

import static junit.framework.TestCase.assertEquals;

import com.google.protobuf.InvalidProtocolBufferException;
import com.google.protobuf.util.JsonFormat;
import gov.cms.mpsm.rda.v1.fiss.FissClaim;
import java.time.Clock;
import java.time.Instant;
import java.time.ZoneOffset;
import org.junit.Test;

public class RandomFissClaimGeneratorTest {
  @Test
  public void randomClaim() throws InvalidProtocolBufferException {
    final Clock july1 = Clock.fixed(Instant.ofEpochMilli(1625172944844L), ZoneOffset.UTC);
    final RandomFissClaimGenerator generator = new RandomFissClaimGenerator(1, true, july1);
    final FissClaim claim = generator.randomClaim();
    final String json = JsonFormat.printer().print(claim);
    assertEquals(
        "{\n"
            + "  \"dcn\": \"9845557\",\n"
            + "  \"hicNo\": \"904843533707\",\n"
            + "  \"currStatusEnum\": \"CLAIM_STATUS_ROUTING\",\n"
            + "  \"currLoc1Enum\": \"PROCESSING_TYPE_OFFLINE\",\n"
            + "  \"currLoc2Enum\": \"CURRENT_LOCATION_2_POST_PAY_7563\",\n"
            + "  \"totalChargeAmount\": \"8.83\",\n"
            + "  \"recdDtCymd\": \"2021-03-03\",\n"
            + "  \"currTranDtCymd\": \"2021-05-14\",\n"
            + "  \"admDiagCode\": \"mszx\",\n"
            + "  \"principleDiag\": \"xm\",\n"
            + "  \"npiNumber\": \"7690551274\",\n"
            + "  \"mbi\": \"8f242z2sssv46\",\n"
            + "  \"fedTaxNb\": \"8932960060\",\n"
            + "  \"fissProcCodes\": [{\n"
            + "    \"procCd\": \"xm\",\n"
            + "    \"procFlag\": \"cd\",\n"
            + "    \"procDt\": \"2021-06-18\"\n"
            + "  }, {\n"
            + "    \"procCd\": \"ztm\",\n"
            + "    \"procFlag\": \"jp\",\n"
            + "    \"procDt\": \"2021-02-15\"\n"
            + "  }, {\n"
            + "    \"procCd\": \"xcx\",\n"
            + "    \"procFlag\": \"rnqz\",\n"
            + "    \"procDt\": \"2021-02-10\"\n"
            + "  }, {\n"
            + "    \"procCd\": \"c\",\n"
            + "    \"procFlag\": \"vc\",\n"
            + "    \"procDt\": \"2021-04-08\"\n"
            + "  }, {\n"
            + "    \"procCd\": \"np\",\n"
            + "    \"procFlag\": \"vbn\",\n"
            + "    \"procDt\": \"2021-05-26\"\n"
            + "  }, {\n"
            + "    \"procCd\": \"tcfrfz\",\n"
            + "    \"procFlag\": \"jfv\",\n"
            + "    \"procDt\": \"2021-02-21\"\n"
            + "  }],\n"
            + "  \"medaProvId\": \"c6vcs2xqbzp5w\",\n"
            + "  \"pracLocAddr1\": \"fz5qbm7h08g\",\n"
            + "  \"pracLocAddr2\": \"sb9b66k2v3fs2wf24p5mxp3k0bth5s2vg\",\n"
            + "  \"pracLocCity\": \"x1njn3q6ftzx2266s0g4rqqx9qp24pb3rhw165ttc3cdnq42s3tkjz1hg\",\n"
            + "  \"pracLocState\": \"zg\",\n"
            + "  \"pracLocZip\": \"60\",\n"
            + "  \"stmtCovFromCymd\": \"2021-01-16\",\n"
            + "  \"stmtCovToCymd\": \"2021-03-27\",\n"
            + "  \"lobCdUnrecognized\": \"h\",\n"
            + "  \"servTypeCdForSpecialFacilitiesEnum\": \"BILL_CLASSIFICATION_FOR_SPECIAL_FACILITIES_HOSPICE_HOSPITAL_BASED\",\n"
            + "  \"freqCdUnrecognized\": \"v\",\n"
            + "  \"billTypCd\": \"6fr\",\n"
            + "  \"fissPayers\": [{\n"
            + "    \"insuredPayer\": {\n"
            + "      \"payersIdEnum\": \"PAYERS_CODE_PUBLIC_HEALTH_SERVICE_OR_OTHER_FEDERAL_AGENCY\",\n"
            + "      \"payersName\": \"hpmqgzchktgcnhgrfdjsrfszzmqggvv\",\n"
            + "      \"relIndEnum\": \"RELEASE_OF_INFORMATION_SIGNED_STATEMENT_IS_RESTRICTED_OR_LIMITED\",\n"
            + "      \"assignIndUnrecognized\": \"w\",\n"
            + "      \"providerNumber\": \"xgkjcndfzpjjm\",\n"
            + "      \"adjDcnIcn\": \"phjhpczrxxdtdhzqcmbgjzx\",\n"
            + "      \"priorPmt\": \"71929.89\",\n"
            + "      \"estAmtDue\": \"40.55\",\n"
            + "      \"insuredRelUnrecognized\": \"21\",\n"
            + "      \"insuredName\": \"qqqtzssmznct\",\n"
            + "      \"insuredSsnHic\": \"dpkq\",\n"
            + "      \"insuredGroupName\": \"zzdvgzfmbnjg\",\n"
            + "      \"insuredGroupNbr\": \"cvrwphb\",\n"
            + "      \"treatAuthCd\": \"tdk\",\n"
            + "      \"insuredSexUnrecognized\": \"s\",\n"
            + "      \"insuredRelX12Enum\": \"PATIENT_RELATIONSHIP_CODE_RESERVED_FOR_NATIONAL_ASSIGNMENT_58\",\n"
            + "      \"insuredDob\": \"2021-03-20\",\n"
            + "      \"insuredDobText\": \"03202021\"\n"
            + "    }\n"
            + "  }, {\n"
            + "    \"insuredPayer\": {\n"
            + "      \"payersIdEnum\": \"PAYERS_CODE_MEDICARE\",\n"
            + "      \"payersName\": \"pzpnq\",\n"
            + "      \"relIndUnrecognized\": \"p\",\n"
            + "      \"assignIndUnrecognized\": \"h\",\n"
            + "      \"providerNumber\": \"strwhkgxcxh\",\n"
            + "      \"adjDcnIcn\": \"pmkcxtkfpdbgmmbzvwfftpr\",\n"
            + "      \"priorPmt\": \"4042.09\",\n"
            + "      \"estAmtDue\": \"65.69\",\n"
            + "      \"insuredRelUnrecognized\": \"50\",\n"
            + "      \"insuredName\": \"dhpcrw\",\n"
            + "      \"insuredSsnHic\": \"jgq\",\n"
            + "      \"insuredGroupName\": \"mkxcqmtdnvxrx\",\n"
            + "      \"insuredGroupNbr\": \"wxzdmxgrfd\",\n"
            + "      \"treatAuthCd\": \"b5k8sjbdb\",\n"
            + "      \"insuredSexUnrecognized\": \"w\",\n"
            + "      \"insuredRelX12Unrecognized\": \"35\",\n"
            + "      \"insuredDob\": \"2021-05-10\",\n"
            + "      \"insuredDobText\": \"05102021\"\n"
            + "    }\n"
            + "  }, {\n"
            + "    \"beneZPayer\": {\n"
            + "      \"payersIdUnrecognized\": \"x\",\n"
            + "      \"payersName\": \"wd59q3snspqs7705gd0cs82bw2\",\n"
            + "      \"relIndUnrecognized\": \"s\",\n"
            + "      \"assignIndUnrecognized\": \"q\",\n"
            + "      \"providerNumber\": \"9j\",\n"
            + "      \"adjDcnIcn\": \"mkh9zmg41mwjmf\",\n"
            + "      \"priorPmt\": \"1500.29\",\n"
            + "      \"estAmtDue\": \"34.30\",\n"
            + "      \"beneRelUnrecognized\": \"32\",\n"
            + "      \"beneLastName\": \"hbpvgghm\",\n"
            + "      \"beneFirstName\": \"dcttnqz\",\n"
            + "      \"beneMidInit\": \"p\",\n"
            + "      \"beneSsnHic\": \"7pg2b49d5nh8\",\n"
            + "      \"insuredGroupName\": \"jsbhnbvw\",\n"
            + "      \"beneDob\": \"2021-06-17\",\n"
            + "      \"beneSexUnrecognized\": \"d\",\n"
            + "      \"treatAuthCd\": \"h\",\n"
            + "      \"insuredSexUnrecognized\": \"z\",\n"
            + "      \"insuredRelX12Enum\": \"PATIENT_RELATIONSHIP_CODE_CADAVER_DONOR\"\n"
            + "    }\n"
            + "  }, {\n"
            + "    \"insuredPayer\": {\n"
            + "      \"payersIdUnrecognized\": \"x\",\n"
            + "      \"payersName\": \"hnpxpsbcwwfpprmrbgmx\",\n"
            + "      \"relIndUnrecognized\": \"k\",\n"
            + "      \"assignIndEnum\": \"ASSIGNMENT_OF_BENEFITS_INDICATOR_NO_BENEFITS_ASSIGNED\",\n"
            + "      \"providerNumber\": \"tnkjkhmjtk\",\n"
            + "      \"adjDcnIcn\": \"dgpwwmtfhxsgqtpmqfctrvz\",\n"
            + "      \"priorPmt\": \"5449.83\",\n"
            + "      \"estAmtDue\": \"8.65\",\n"
            + "      \"insuredRelEnum\": \"PATIENT_RELATIONSHIP_CODE_RESERVED_FOR_NATIONAL_ASSIGNMENT_81\",\n"
            + "      \"insuredName\": \"zsmdmzwrzmvqpmdxrdkvfzf\",\n"
            + "      \"insuredSsnHic\": \"fcm\",\n"
            + "      \"insuredGroupName\": \"njghwncgbrh\",\n"
            + "      \"insuredGroupNbr\": \"gcrwr\",\n"
            + "      \"treatAuthCd\": \"5f\",\n"
            + "      \"insuredSexUnrecognized\": \"g\",\n"
            + "      \"insuredRelX12Unrecognized\": \"64\",\n"
            + "      \"insuredDob\": \"2021-04-25\",\n"
            + "      \"insuredDobText\": \"04252021\"\n"
            + "    }\n"
            + "  }],\n"
            + "  \"fissAuditTrail\": [{\n"
            + "    \"badtStatusEnum\": \"CLAIM_STATUS_ROUTING\",\n"
            + "    \"badtLoc\": \"8bp5x\",\n"
            + "    \"badtOperId\": \"f3twws\",\n"
            + "    \"badtReas\": \"d\",\n"
            + "    \"badtCurrDateCymd\": \"2021-05-07\"\n"
            + "  }, {\n"
            + "    \"badtStatusUnrecognized\": \"w\",\n"
            + "    \"badtLoc\": \"r1jv\",\n"
            + "    \"badtOperId\": \"7pjp\",\n"
            + "    \"badtReas\": \"m9\",\n"
            + "    \"badtCurrDateCymd\": \"2021-04-02\"\n"
            + "  }, {\n"
            + "    \"badtStatusUnrecognized\": \"g\",\n"
            + "    \"badtLoc\": \"8361\",\n"
            + "    \"badtOperId\": \"wvjdw0f1d\",\n"
            + "    \"badtReas\": \"tx\",\n"
            + "    \"badtCurrDateCymd\": \"2021-04-08\"\n"
            + "  }, {\n"
            + "    \"badtStatusEnum\": \"CLAIM_STATUS_REJECT\",\n"
            + "    \"badtLoc\": \"x\",\n"
            + "    \"badtOperId\": \"kz4\",\n"
            + "    \"badtReas\": \"d7b\",\n"
            + "    \"badtCurrDateCymd\": \"2021-06-02\"\n"
            + "  }, {\n"
            + "    \"badtStatusUnrecognized\": \"b\",\n"
            + "    \"badtLoc\": \"p2np5\",\n"
            + "    \"badtOperId\": \"r9bt80rk\",\n"
            + "    \"badtReas\": \"b\",\n"
            + "    \"badtCurrDateCymd\": \"2021-04-10\"\n"
            + "  }, {\n"
            + "    \"badtStatusUnrecognized\": \"k\",\n"
            + "    \"badtLoc\": \"5pz\",\n"
            + "    \"badtOperId\": \"scrrd\",\n"
            + "    \"badtReas\": \"c\",\n"
            + "    \"badtCurrDateCymd\": \"2021-04-22\"\n"
            + "  }, {\n"
            + "    \"badtStatusUnrecognized\": \"f\",\n"
            + "    \"badtLoc\": \"w6s\",\n"
            + "    \"badtOperId\": \"9f83\",\n"
            + "    \"badtReas\": \"0\",\n"
            + "    \"badtCurrDateCymd\": \"2021-05-14\"\n"
            + "  }],\n"
            + "  \"rejectCd\": \"sg260\",\n"
            + "  \"fullPartDenInd\": \"8\",\n"
            + "  \"nonPayInd\": \"gr\",\n"
            + "  \"xrefDcnNbr\": \"3s4wb7qhvqh3\",\n"
            + "  \"adjReqCdUnrecognized\": \"6\",\n"
            + "  \"adjReasCd\": \"d\",\n"
            + "  \"cancelXrefDcn\": \"t85\",\n"
            + "  \"cancelDateCymd\": \"2021-03-25\",\n"
            + "  \"cancAdjCdUnrecognized\": \"r\",\n"
            + "  \"originalXrefDcn\": \"9s\",\n"
            + "  \"paidDtCymd\": \"2021-01-04\",\n"
            + "  \"admDateCymd\": \"2021-06-23\",\n"
            + "  \"admSourceUnrecognized\": \"m\",\n"
            + "  \"primaryPayerCodeUnrecognized\": \"q\",\n"
            + "  \"attendPhysId\": \"5tsrxk06k06xr\",\n"
            + "  \"attendPhysLname\": \"z5g\",\n"
            + "  \"attendPhysFname\": \"0xt8m1fhkg\",\n"
            + "  \"attendPhysMint\": \"7\",\n"
            + "  \"attendPhysFlagEnum\": \"PHYSICIAN_FLAG_NO\",\n"
            + "  \"operatingPhysId\": \"q55p5fq7s8bcsxf\",\n"
            + "  \"operPhysLname\": \"cghqkg06rg9fg\",\n"
            + "  \"operPhysFname\": \"4d4tf7h188107gzz\",\n"
            + "  \"operPhysMint\": \"n\",\n"
            + "  \"operPhysFlagEnum\": \"PHYSICIAN_FLAG_NO\",\n"
            + "  \"othPhysId\": \"5vws5\",\n"
            + "  \"othPhysLname\": \"69ffchwwg\",\n"
            + "  \"othPhysFname\": \"hm8qjf2ns1p429hc5f\",\n"
            + "  \"othPhysMint\": \"3\",\n"
            + "  \"othPhysFlagEnum\": \"PHYSICIAN_FLAG_NO\",\n"
            + "  \"xrefHicNbr\": \"9cdhftsdx4kt\",\n"
            + "  \"procNewHicIndUnrecognized\": \"v\",\n"
            + "  \"newHic\": \"zxw89\",\n"
            + "  \"reposIndEnum\": \"REPOSITORY_INDICATOR_HIC_HAS_BEEN_MOVED\",\n"
            + "  \"reposHic\": \"3\",\n"
            + "  \"mbiSubmBeneIndUnrecognized\": \"q\",\n"
            + "  \"adjMbiIndEnum\": \"ADJUSTMENT_MBI_INDICATOR_HIC_SUBMITTED_ON_ADJUSTMENT_OR_CANCEL_CLAIM\",\n"
            + "  \"adjMbi\": \"pnkvxbx79m\",\n"
            + "  \"medicalRecordNo\": \"4mr7sj6k56\"\n"
            + "}",
        json);
  }
}
